--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,53 @@
 body {
-  margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #232327;
+}
+.parent {
+  width: 500px;
+  height: 500px;
+  padding: 2px;
+  background-color: white;
+  border-radius: 3px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-column-gap: 2px;
+  grid-row-gap: 2px;
 }
 
-code {
-  font-family:
-    source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    'Courier New',
-    monospace;
+.div1 { grid-area: 1 / 1 / 2 / 5; }
+.div2 { grid-area: 6 / 1 / 7 / 3; }
+.div3 { grid-area: 6 / 3 / 7 / 4; }
+.div4 { grid-area: 6 / 4 / 7 / 5; }
+.div5 { grid-area: 5 / 4 / 6 / 5; }
+.div6 { grid-area: 4 / 4 / 5 / 5; }
+.div7 { grid-area: 3 / 4 / 4 / 5; }
+.div8 { grid-area: 2 / 4 / 3 / 5; }
+.div9 { grid-area: 5 / 1 / 6 / 2; }
+.div10 { grid-area: 5 / 2 / 6 / 3; }
+.div11 { grid-area: 5 / 3 / 6 / 4; }
+.div12 { grid-area: 4 / 1 / 5 / 2; }
+.div13 { grid-area: 4 / 2 / 5 / 3; }
+.div14 { grid-area: 4 / 3 / 5 / 4; }
+.div15 { grid-area: 3 / 1 / 4 / 2; }
+.div16 { grid-area: 3 / 2 / 4 / 3; }
+.div17 { grid-area: 3 / 3 / 4 / 4; }
+.div18 { grid-area: 2 / 1 / 3 / 2; }
+.div19 { grid-area: 2 / 2 / 3 / 3; }
+.div20 { grid-area: 2 / 3 / 3 / 4; }
+
+.btn {
+  font-size: large;
+}
+
+.operands {
+  background-color: #F5913E;
+}
+
+.numbers {
+  background-color: #E0E0E0;
+}
+
+.result {
+  background-color: #858694;
+  text-align: right;
 }
